# boardGame

./: .env_simple  .gitignore  README.md  README_cn.md  index.html  package-lock.json  package.json
src/: App.vue  index.html  main.js  style.css
src-admin/: Cargo.toml
src-admin/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bull/: .gitignore  Cargo.toml
src-tauri/bull/src/: bull.rs  bulls.rs  lib.rs
src-tauri/plate/: Cargo.toml
src-tauri/plate/src/: lib.rs  plate.rs  plates.rs
src-tauri/room/: Cargo.toml
src-tauri/room/src/: lib.rs  outcome.rs  player.rs  rooms.rs
src-tauri/src/: main.rs
src-tauri/user/: .gitignore  Cargo.toml
src-tauri/user/migrations/2022-09-29-084303_user/: down.sql  up.sql
src-tauri/user/src/: lib.rs  schema.rs  user.rs
src/components/: Bull.vue  Greet.vue
