[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
uuid = "1.1.2"
anyhow = "1.0.65"
sea-orm = { version = "^0.9.0", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
oauth2 = {version = "4.2.3", features = [ "reqwest", "curl", "ureq"] }